--- a/public/stylesheets/showStyle.css
+++ b/public/stylesheets/showStyle.css
@@ -14,7 +14,7 @@ header {
   position: relative;
   z-index: -1;
   margin: -5px;
-  height: 360px;
+  height: 300px;
   background: #dddddd center center url('https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5720/restaurants-list-cover.jpg');
   background-size: cover;
   filter: blur(3px);
@@ -68,15 +68,6 @@ header {
   font-size: 12px;
 }
 
-.restaurant-show-title {
-  position: relative;
-  top: -100px;
-  color: white;
-  text-align: center;
-  font-size: 3rem;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
 .restaurant-home-title {
   position: relative;
   top: -200px;
@@ -84,6 +75,7 @@ header {
   text-align: center;
   font-size: 4rem;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  font-weight:bold;
 }
 
 .restaurant-alert-title {
