--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,8 @@
 <!-- search bar -->
 <div class="banner"></div>
+<h6 class="restaurant-home-title">Enjoy your food journey</h6>
+<h6 class="restaurant-home-title">Open your food pocket</h6>
+
 <div class="container">
   <div class="search-group">
     <div class="search-bar col-md-8">
@@ -37,7 +40,7 @@
   </div>
 
 </div>
-</div>
+
 
 <!-- restaurant list -->
 <div class="container mt-5">
