--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <!-- search bar -->
 <div class="banner"></div>
-<h6 class="restaurant-home-title">Enjoy your food journey</h6>
-<h6 class="restaurant-home-title">Open your food pocket</h6>
+<h6 class="restaurant-home-title"><i class="fas fa-cookie"></i> Your Food Journey</h6>
+<h6 class="restaurant-home-title">Your Food Pocket <i class="fas fa-cookie-bite"></i></h6>
 
 <div class="container">
   <div class="search-group">
